--- a/app/globals.css
+++ b/app/globals.css
@@ -20,6 +20,10 @@
     @apply flex flex-col gap-2 my-2;
   }
 
+  button:disabled {
+    @apply bg-green-600 cursor-default;
+  }
+
   .login-form input {
     @apply border border-black/20 rounded-md px-4 py-2 bg-gray-300 text-black;
   }
